--- a/Vinylizr/package.json
+++ b/Vinylizr/package.json
@@ -7,9 +7,17 @@
   },
   "dependencies": {
     "axios": "^0.14.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "eslint-config-rallycoding": "^3.1.0",
     "firebase": "^3.3.2",
+    "lodash": "^4.17.4",
     "react": "15.3.1",
-    "react-native": "0.33.0"
+    "react-native": "0.33.0",
+    "react-native-autocomplete": "^0.3.0",
+    "react-throttle": "^0.3.0",
+    "throttle-debounce": "^1.0.1"
   }
 }
