--- a/Vinylizr/package.json
+++ b/Vinylizr/package.json
@@ -17,6 +17,7 @@
     "react": "15.3.1",
     "react-native": "0.33.0",
     "react-native-autocomplete": "^0.3.0",
+    "react-native-swipe-list-view": "^0.4.1",
     "react-throttle": "^0.3.0",
     "throttle-debounce": "^1.0.1"
   }
