--- a/Vinylizr/package.json
+++ b/Vinylizr/package.json
@@ -18,12 +18,18 @@
     "react": "15.3.1",
     "react-native": "0.33.0",
     "react-native-autocomplete": "^0.3.0",
+    "react-native-router-flux": "^3.38.0",
     "react-native-swipe-list-view": "^0.4.1",
     "react-native-swipeable": "^0.4.0",
     "react-native-swipeout": "^2.0.13",
     "react-native-swipeout-plus": "^0.1.0",
     "react-native-swiping-row": "^0.1.2",
+    "react-redux": "^5.0.5",
     "react-throttle": "^0.3.0",
+    "redux": "^3.7.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "throttle-debounce": "^1.0.1"
   }
 }
