--- a/Vinylizr/android/settings.gradle
+++ b/Vinylizr/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'Vinylizr'
+include ':@remobile/react-native-splashscreen'
+project(':@remobile/react-native-splashscreen').projectDir = new File(rootProject.projectDir, '../node_modules/@remobile/react-native-splashscreen/android')
 
 include ':app'
