--- a/Vinylizr/package.json
+++ b/Vinylizr/package.json
@@ -3,31 +3,29 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
+    "start": "react-native start",
+    "test": "jest"
   },
   "dependencies": {
-    "@remobile/react-native-splashscreen": "^1.0.7",
-    "axios": "^0.14.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "eslint-config-rallycoding": "^3.1.0",
-    "firebase": "^3.3.2",
-    "lodash": "^4.17.4",
+    "axios": "^0.16.2",
+    "firebase": "^4.3.0",
     "react": "16.0.0-alpha.6",
-    "react-native": "^0.43.0",
-    "react-native-autocomplete": "^0.3.0",
-    "react-native-swipeable": "^0.4.0",
-    "react-redux": "^5.0.5",
-    "react-throttle": "^0.3.0",
-    "redux": "^3.7.0",
-    "redux-devtools-extension": "^2.13.2",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.2.0",
-    "throttle-debounce": "^1.0.1"
+    "react-icons": "^2.2.5",
+    "react-native": "^0.44.0",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-swipeable-flat-list": "0.0.4",
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-preset-react-native": "^2.1.0",
-    "babel-preset-stage-2": "^6.24.1"
+    "babel-jest": "21.0.0",
+    "babel-preset-react-native": "3.0.2",
+    "jest": "21.0.1",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
