--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.0.0-alpha.6",
     "react-icons": "^2.2.5",
     "react-native": "^0.44.0",
+    "react-native-modal": "^3.1.0",
     "react-native-swipeable": "^0.6.0",
     "react-native-swipeable-flat-list": "0.0.4",
     "react-navigation": "^1.0.0-beta.11",
