--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'Vinylizr'
+include ':react-native-linear-gradient'
+project(':react-native-linear-gradient').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-linear-gradient/android')
+include ':react-native-blur-image'
+project(':react-native-blur-image').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-blur-image/android')
 
 include ':app'
