--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,9 +50,9 @@ import com.android.build.OutputFile
  *   // require('./image.png')), in release mode
  *   resourcesDirRelease: "$buildDir/intermediates/res/merged/release",
  *
- *   // by default the gradle tasks are skipped if none of the JS files or assets change; this means
+ *   // by default the gradle tasks are skipped if none of the JS files or assets change this means
  *   // that we don't look at files in android/ or ios/ to determine whether the tasks are up to
- *   // date; if you have any other folders that you want to ignore for performance reasons (gradle
+ *   // date if you have any other folders that you want to ignore for performance reasons (gradle
  *   // indexes the entire tree), add them here. Alternatively, if you have JS files in android/
  *   // for example, you might want to remove it from here.
  *   inputExcludes: ["android/**", "ios/**"],
