--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-native-deep-linking": "^2.1.0",
     "react-native-linear-gradient": "^2.3.0",
     "react-native-modal": "^3.1.0",
-    "react-native-stars-rating": "^0.1.7",
+    "react-native-stars": "^1.1.3",
     "react-native-swipeable": "^0.6.0",
     "react-native-swipeable-flat-list": "0.0.4",
     "react-native-vector-icons": "^4.4.0",
