--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@expo/samples": "2.1.1",
     "axios": "^0.18.0",
-    "expo": "^32.0.0",
+    "expo": "^32.0.6",
     "firebase": "^5.8.5",
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
@@ -28,6 +28,7 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
@@ -35,8 +36,11 @@
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-expo": "^5.0.0",
-    "eslint": "^5.15.3",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint": "5.3.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "jest-expo": "^32.0.0",
     "redux-devtools-extension": "^2.13.8"
   },
