--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-expo": "^5.0.0",
     "eslint": "5.3.0",
-    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
