--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@expo/samples": "2.1.1",
     "apollo-client": "^2.5.1",
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "expo": "^32.0.6",
     "express-session": "^1.16.1",
