--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "react-native-modal": "^9.0.0",
     "react-native-stars": "^1.1.5",
     "react-native-swipeable": "^0.6.0",
-    "react-navigation": "^3.0.9",
+    "react-navigation": "^3.11.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
@@ -52,7 +52,8 @@
     "eslint-plugin-react": "^7.11.0",
     "jest-expo": "^32.0.0",
     "reactotron-react-native": "^3.2.2",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "remote-redux-devtools": "^0.5.16"
   },
   "private": true
 }
