--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-native-deep-linking": "^2.2.0",
     "react-native-modal": "^9.0.0",
     "react-native-stars": "^1.1.5",
+    "react-native-super-grid": "^3.0.4",
     "react-native-swipeable": "^0.6.0",
     "react-navigation": "^3.11.0",
     "react-redux": "^6.0.1",
