create badge system

--- a/frontend/jsconfig.json
+++ b/frontend/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "*": ["types/*"],
       "#src/*": ["./src/*"],
       "#views/*": ["./src/views/*"],
       "#configs/*": ["./src/configs/*"],
