--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.2",
     "@expo/samples": "2.1.1",
-    "apollo-client": "^2.5.1",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link-http": "^1.5.16",
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
-    "expo": "^33.0.0",
+    "expo": "^35.0.0",
     "expo-cli": "^2.20.10",
     "expo-font": "~5.0.1",
     "express-session": "^1.16.1",
@@ -27,15 +30,19 @@
     "lodash": "^4.17.11",
     "query-string": "^6.5.0",
     "react": "16.8.3",
-    "react-apollo": "^2.5.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-animatable": "^1.3.1",
+    "react-apollo": "^3.1.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-animatable": "^1.3.2",
     "react-native-deep-linking": "^2.2.0",
-    "react-native-modal": "^9.0.0",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-modal": "^11.4.0",
+    "react-native-reanimated": "~1.2.0",
     "react-native-stars": "^1.1.5",
-    "react-native-super-grid": "^3.0.4",
+    "react-native-super-grid": "^3.1.1",
     "react-native-swipeable": "^0.6.0",
-    "react-navigation": "^3.11.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.9.4",
+    "react-navigation-tabs": "^2.5.6",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-debounced": "^0.5.0",
@@ -53,9 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "jest-expo": "^32.0.0",
-    "reactotron-react-native": "^3.2.2",
-    "redux-devtools-extension": "^2.13.8",
-    "remote-redux-devtools": "^0.5.16"
+    "reactotron-react-native": "^3.2.2"
   },
   "private": true
 }
