--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^7.0.0",
     "expo": "^35.0.0",
     "expo-cli": "^2.20.10",
-    "expo-font": "~5.0.1",
+    "expo-font": "^7.0.0",
     "express-session": "^1.16.1",
     "firebase": "^5.8.5",
     "graphql": "^14.2.1",
