--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,11 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
-    "expo": "^35.0.0",
+    "expo": "^37.0.0",
     "expo-cli": "^2.20.10",
-    "expo-font": "^7.0.0",
+    "expo-font": "~8.1.0",
     "express-session": "^1.16.1",
-    "firebase": "^5.8.5",
+    "firebase": "7.9.0",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "immutable": "^4.0.0-rc.12",
@@ -36,7 +36,7 @@
     "react-native-deep-linking": "^2.2.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-modal": "^11.4.0",
-    "react-native-reanimated": "~1.2.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-stars": "^1.1.5",
     "react-native-super-grid": "^3.1.1",
     "react-native-swipeable": "^0.6.0",
