--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "classnames": "^2.2.6",
     "dotenv": "^7.0.0",
     "expo": "^37.0.0",
+    "expo-auth-session": "~1.0.0",
     "expo-cli": "^2.20.10",
     "expo-font": "~8.1.0",
     "express-session": "^1.16.1",
@@ -29,14 +30,15 @@
     "immutable": "^4.0.0-rc.12",
     "lodash": "^4.17.11",
     "query-string": "^6.5.0",
-    "react": "16.8.3",
+    "react": "16.9.0",
     "react-apollo": "^3.1.2",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
     "react-native-animatable": "^1.3.2",
     "react-native-deep-linking": "^2.2.0",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-modal": "^11.4.0",
     "react-native-reanimated": "~1.7.0",
+    "react-native-screens": "~2.2.0",
     "react-native-stars": "^1.1.5",
     "react-native-super-grid": "^3.1.1",
     "react-native-swipeable": "^0.6.0",
@@ -53,13 +55,13 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-module-resolver": "^3.2.0",
-    "babel-preset-expo": "^5.0.0",
+    "babel-preset-expo": "^8.1.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
-    "jest-expo": "^32.0.0",
+    "jest-expo": "^37.0.0",
     "reactotron-react-native": "^3.2.2"
   },
   "private": true
